refactor(core): 优化代码实现和依赖配置
- 将 memoTagMapper.selectBatchIds 替换为 selectByIds 方法调用
- 移除 MiniCheckinShareServiceImpl 中冗余的分页设置代码
- 使用 ProcessBuilder 替代 Runtime.exec 执行后台脚本进程
- 添加 mockito 依赖和相关编译器配置
- 简化 RedisConfig 中的序列化器创建逻辑
- 修复 WechatServiceImpl 中考勤接口返回类型的类型转换
- 优化启动日志中的 ASCII 艺术字符串表示方式